    Mediawiki GUI.
  * Update Mediawiki XML exports to use the 0.7 XSD (previously 0.3).
  * Change the default image namespace from "Image" to "File" for new installs.
  * Upgrade to Spring Framework 3.1.1.RELEASE.
  * Upgrade to Lucene Search 3.6.
  * Upgrade to commons-io-2.2.

Bugfixes:

  * Update of last login date and time after login (wrh2, cclavadetscher).

Translation Updates:

  * None.

1.2.2
=====

New Features:

  * Support comparison operations in the #expr tag ("{{#expr: -1 < 0}}").
  * Upgrade to exp4j 0.3.1.

Bugfixes:

  * None.

Translation Updates:

  * Updated German translations (axelclk).


1.2.1
=====

New Features:

  * None.

Bugfixes:

<<<<<<< .working
1.2.2
=====

New Features:

  * Support comparison operations in the #expr tag ("{{#expr: -1 < 0}}").
  * Upgrade to exp4j 0.3.1.

Bugfixes:

  * None.

Translation Updates:

  * Updated German translations (axelclk).


1.2.1
=====

New Features:

  * None.

Bugfixes:

  * Fix a Javascript error on the search page with IE.  Reported by shar.
  * Problem with history when using DB2 database.  Reported with a fix by
    Dennis N Brown.

Translation Updates:

  * Updated Italian translations (cclavadetscher).


=======
  * Fix a Javascript error on the search page with IE.  Reported by shar.
  * Problem with history when using DB2 database.  Reported with a fix by
    Dennis N Brown.

Translation Updates:

  * Updated Italian translations (cclavadetscher).


>>>>>>> .merge-right.r4125
1.2
===

New Features:

  * Upgrade dependencies to Servlet 2.5 and JSP 2.1.  Java 5 has been required
    since JAMWiki 0.8, so this change should be transparent to most users.
  * Add support for limited wiki text in edit summaries (wiki links, interwiki
    links) to match Mediawiki behavior.
  * Add a new JAMWiki:Header system topic that allows adding a custom message
    to the top of all pages, just below the tab bar.
  * Add a new JAMWiki:Custom.css stylesheet.  Starting with JAMWiki 1.2